[package]
name = "yet-another-md5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
log = "0.4.16"
simplelog = "0.11.2"

[dev-dependencies]
rstest = "0.12.0"
serial_test = "0.6.0"
criterion = "0.3"
tempfile = "3.8.1"
