[package]
name = "yet-another-md5"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A library to compute md5 hashes from Read objects"
repository = "https://github.com/Terseus/yet-another-md5"
readme = "README.md"
keywords = ["hash", "md5"]
categories = ["algorithms"]
exclude = [".github", ".gitignore", ".pre-commit-config.yaml"]

[lib]
name = "ya_md5"
path = "src/lib.rs"

[dependencies]
log = "0.4.16"
thiserror = "1.0.50"

[dev-dependencies]
rstest = "0.12.0"
serial_test = "0.6.0"
criterion = "0.3"
tempfile = "3.8.1"
env_logger = "0.11.3"
ctor = "0.2.7"
